<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!--Intent extra flags-->
    <string name="intent_ndef_message">com.dangerousthings.nfc.NDEF_MESSAGE</string>
    <string name="intent_tag_uid">com.dangerousthings.nfc.TAG_UID</string>
    <string name="intent_onboard_flag">com.dangerousthings.nfc.ONBOARD_FLAG</string>
    <string name="intent_record">com.dangerousthings.nfc.NDEF_RECORD</string>
    <string name="intent_ndef_capacity">com.dangerousthings.nfc.NDEF_CAPACITY</string>
    <string name="intent_start_edit_ndef">com.dangerousthings.nfc.START_EDIT_NDEF_ACTIVITY</string>
    <string name="intent_request_code">com.dangerousthings.nfc.REQUEST_CODE</string>
    <!--Menu IDs-->
    <string name="menu_view_records">com.dangerousthings.nfc.VIEW_RECORDS</string>
    <string name="menu_memory_management">com.dangerousthings.nfc.MANAGE_MEMORY</string>
    <string name="menu_ndef_submenu">com.dangerousthings.nfc.NDEF_SUBMENU</string>
    <string name="menu_memory_submenu">com.dangerousthings.nfc.MEMORY_SUBMENU</string>
    <!--Mime Types-->
    <string name="mime_plaintext">text/plain</string>
    <!---->
    <string name="app_name">Dangerous NFC</string>
    <string name="ndef_operations">NDEF Operations</string>
    <string name="drawer_toggle_open">Drawer Open</string>
    <string name="drawer_toggle_close">Drawer Close</string>
    <string name="cryptographic_operations">Cryptographic Operations</string>
    <string name="decrypt_ndef_text">Decrypt PGP NDEF Text</string>
    <string name="write_ndef_text_records">Write NDEF Records</string>
    <string name="nfc_tag_operations">NFC Tag Operations</string>
    <string name="erase_tag_contents">Erase Tag Contents</string>
    <string name="get_tag_info">Tag Info</string>
    <string name="encrypt_ndef_text">Encrypt PGP NDEF Text</string>
    <string name="hamburger_icon_image">hamburger icon image</string>
    <string name="read_payload">Read NDEF</string>
    <string name="sync_implant">Sync Implant</string>
    <string name="hoker_logo">hoker logo</string>
    <string name="dangerousthings_logo">dangerousthings logo</string>
    <string name="x_symbol">x symbol</string>
    <string name="shared_preference_key">com.dangerousthings.nfc.PREFERENCE_FILE_KEY</string>
    <string name="saved_theme">com.dangerousthings.nfc.SAVED_THEME</string>
    <string name="record_space">Record %1$d</string>
    <string name="ndef_records">NDEF Records:</string>
    <string name="scan_animation">scan animation</string>
    <string name="advanced">Advanced</string>
    <string name="back_button">back button</string>
    <string name="add_button">add button</string>
    <string name="save_button">save button</string>
    <string name="saved_implants">Saved Implants</string>
    <string name="theme">Theme:</string>
    <string name="change_theme">Change Theme</string>
    <string name="confirm_button">confirm button</string>
    <string name="dangerousnfc">DangerousNFC</string>
    <string name="implantname">ImplantName</string>
    <string name="uid">UID:</string>
    <string name="implant_image">implant image</string>
    <string name="tag_family">Tag Family:</string>
    <string name="implant_model">Implant Model:</string>
    <string name="operations">Operations</string>
    <string name="no_record_text_detected">No record text detected</string>
    <string name="markdown">Markdown</string>
    <string name="plain_text">Plain Text</string>
    <string name="jpeg">JPEG</string>
    <string name="uri">URI</string>
    <string name="two_arguments">%1$d%2$s</string>
    <string name="write_ndef_message_button">write ndef message button</string>
    <string name="down_arrow">down arrow</string>
    <string name="enter_text_message">Enter text message</string>
    <string name="settings">Settings</string>
    <string name="new_ndef_message">New NDEF Message</string>
    <string name="enter_markdown_text">Enter markdown text</string>
    <string name="bold_button">bold button</string>
    <string name="italicize_button">italicize button</string>
    <string name="code_button">code button</string>
    <string name="link_button">link button</string>
    <string name="strikethrough_button">strikethrough button</string>
    <string name="bullet_button">bullet button</string>
    <string name="quote_button">quote button</string>
    <string name="break_button">break button</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="type_password">Type Password</string>
    <string name="re_enter_password">Re-enter Password</string>
    <string name="enter_encryption_passphrase">Enter Encryption Passphrase:</string>
    <string name="enter_decryption_password">Enter Decryption Password:</string>
    <string name="you_have_no_saved_implants">You have no saved implants</string>
    <string name="no_ndef_records_detected">No NDEF records detected</string>
    <string name="enter_a_label_for_this_ndef_record">Enter a Label for this NDEF Record</string>
    <string name="enter_record_label">Enter Record Label</string>
    <string name="passwords_do_not_match_try_again">Passwords do not match. Try again.</string>
    <string name="encrypt_record">Encrypt Record</string>
    <string name="remove_record_encryption">Remove Record Encryption</string>
    <string name="edit_record_label">Edit Record Label</string>
    <string name="delete_record">Delete Record</string>
    <string name="record_options">Record Options</string>
    <string name="url">URL:</string>
    <string name="type_url">Type URL</string>
    <string name="ndef">NDEF</string>
</resources>
