<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:background="@drawable/rounded_primary_variant">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/proxima_nova_regular"
        android:text="@string/enter_decryption_password"
        android:textColor="?attr/colorSecondaryVariant"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/decryption_password_edittext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:fontFamily="@font/proxima_nova_regular"
        android:hint="@string/type_password"
        android:inputType="textPassword"
        android:textColor="?attr/colorSecondaryVariant"
        android:textColorHighlight="?attr/colorAccent"
        android:textColorHint="?attr/colorAccent"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/decryption_password_button_ok"
        android:textColor="?attr/colorPrimary"
        android:layout_width="80dp"
        android:layout_height="30dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:background="@android:color/transparent"
        android:fontFamily="@font/proxima_nova_bold"
        android:text="@string/ok"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/decryption_password_edittext" />

    <Button
        android:id="@+id/decryption_password_button_cancel"
        android:layout_width="80dp"
        android:layout_height="30dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="16dp"
        android:background="@android:color/transparent"
        android:fontFamily="@font/proxima_nova_bold"
        android:text="@string/cancel"
        android:textAllCaps="false"
        android:textColor="?attr/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/decryption_password_button_ok"
        app:layout_constraintTop_toBottomOf="@+id/decryption_password_edittext" />

</androidx.constraintlayout.widget.ConstraintLayout>