<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.MainDrawerFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/main_text_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/ibmplexmono_semibold"
            android:text="@string/dangerousnfc"
            android:textColor="?attr/colorSecondaryVariant"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/main_text_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp"
            android:drawablePadding="10dp"
            android:fontFamily="@font/ibmplexmono_semibold"
            android:gravity="center"
            android:text="@string/settings"
            android:textColor="?attr/colorSecondaryVariant"
            android:textSize="18sp"
            app:drawableStartCompat="@drawable/ic_settings"
            app:drawableTint="?attr/colorSecondaryVariant"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/main_text_saved_implants"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_secondary"
            android:drawablePadding="10dp"
            android:gravity="center"
            android:fontFamily="@font/ibmplexmono_semibold"
            android:padding="10dp"
            android:text="@string/saved_implants"
            android:textColor="?attr/colorPrimary"
            android:textSize="18sp"
            app:drawableStartCompat="@drawable/ic_save"
            app:drawableTint="?attr/colorPrimary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/main_text_title" />

        <TextView
            android:id="@+id/main_text_new_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_secondary"
            android:drawablePadding="10dp"
            android:fontFamily="@font/ibmplexmono_semibold"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/new_ndef_message"
            android:textColor="?attr/colorPrimary"
            android:textSize="18sp"
            app:drawableStartCompat="@drawable/ic_add"
            app:drawableTint="?attr/colorPrimary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/main_text_saved_implants" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>